--- a/.gitignore
+++ b/.gitignore
@@ -226,3 +226,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,visualstudiocode,goland,go
+
+
+test.db
